testdata/typechecker/error/IfTest-err1.java
int main() {
            if (23) {} else {} // TE
        	return 0;
}
